[gd_scene load_steps=4 format=3 uid="uid://fb52l6mkeubw"]

[ext_resource type="Script" uid="uid://dcm3hmdm62bxd" path="res://levels/jump_pressure_plate.gd" id="1_glgk0"]
[ext_resource type="Texture2D" uid="uid://bqxn11rl4ljcr" path="res://icon.svg" id="2_a1t0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xaqss"]
size = Vector2(41, 8)

[node name="JumpPressurePlate" type="StaticBody2D"]
scale = Vector2(0.55999964, 0.55999964)
script = ExtResource("1_glgk0")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -2.7500029)
scale = Vector2(0.89665747, 0.2304688)
texture = ExtResource("2_a1t0k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-54, 12, -21, -17, 1.9224396, -17.000004, 25, -17, 55, 12)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, -23)
shape = SubResource("RectangleShape2D_xaqss")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
